PR/45843: Henning Petersen: Fix resource leak on error.